fix: DB 조회 효율성 수정
- 테스트 수정